# Raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  boxtest.sdf  gridscene.sdf  scene.sdf  shadowtest.sdf  shadowtest_old.sdf  testSts.txt
framework/: Box.cpp  Box.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Composite.cpp  Composite.hpp  Intersection.hpp  LightPoint.cpp  LightPoint.hpp  Material.cpp  Material.hpp  RenderObject.cpp  RenderObject.hpp  SDFLoader.cpp  SDFLoader.hpp  Scene.hpp  Sphere.cpp  Sphere.hpp  color.hpp  fensterchen.hpp  pixel.cpp  pixel.hpp  ppmwriter.cpp  ppmwriter.hpp  ray.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
output/: ppmtopng.sh  renderSDFs.sh
sdfGenerator/: generatorMac  sdfGenerator.cpp  stdafx.cpp
sdfGenerator/sdfGenerator/: sdfGenerator.sln
sdfGenerator/sdfGenerator/Debug/: file141.txt  file142.txt  file143.txt  file144.txt  file145.txt  file146.txt  file147.txt  file148.txt  file149.txt  file150.txt  file151.txt  file152.txt  file153.txt  file154.txt  file155.txt  file156.txt  file157.txt  file158.txt  file159.txt  file160.txt  file161.txt  file162.txt  file163.txt  file164.txt  file165.txt  file166.txt  file167.txt  file168.txt  file169.txt  file170.txt  file171.txt  file172.txt  file173.txt  file174.txt  file175.txt  file176.txt  file177.txt  file178.txt  file179.txt  file180.txt  (+61 more)
sdfGenerator/sdfGenerator/ipch/sdfgenerator-e5321624/: sdfgenerator-535fe9aa.ipch  sdfgenerator-a6e74170.ipch
sdfGenerator/sdfGenerator/sdfGenerator/: ReadMe.txt  file141.txt  file142.txt  file143.txt  file144.txt  file145.txt  file146.txt  file147.txt  file148.txt  file149.txt  file150.txt  file151.txt  file152.txt  file153.txt  file154.txt  file155.txt  file156.txt  file157.txt  file158.txt  file159.txt  file160.txt  file161.txt  file162.txt  file163.txt  file164.txt  file165.txt  file166.txt  file167.txt  file168.txt  file169.txt  file170.txt  file171.txt  file172.txt  file173.txt  file174.txt  file175.txt  file176.txt  file177.txt  file178.txt  file179.txt  (+64 more)
sdfGenerator/sdfGenerator/sdfGenerator/Debug/: sdfGenerator.pch  vc120.idb
sdfGenerator/sdfGenerator/sdfGenerator/Debug/sdfGenerator.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sdfGenerator.lastbuildstate
sdfGenerator/sdfGenerator/sdfGenerator/Release/: sdfGenerator.pch
sdfGenerator/sdfGenerator/sdfGenerator/Release/sdfGenerator.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sdfGenerator.lastbuildstate
source/: CMakeLists.txt  example.cpp  raytracer.cpp
tests/: CMakeLists.txt
